<resources>

    <string name="PrivacyPolicyLINK" translatable="false">https://rkesta.com/PrivacyPolicy.aspx</string>
    <string name="TermsConditionLINK" translatable="false">https://rkesta.com/TermsCondition.html</string>

    <string name="app_name">Richiesta</string>
    <string name="title_home">Main</string>
    <string name="title_shoppingbasket">Shopping Basket</string>
    <string name="title_settings">Settings</string>

    <!--    <string name="version_unknown">نسخه غير معروفه</string>-->
    <string name="version_unknown">unknown version</string>

    <string name="action_settings">Settings</string>

    <string name="Edit_Profile">Edit Profile</string>

    <string name="My_Orders">My Orders</string>
    <string name="Change_Password">Change Password</string>
    <string name="Password">Password</string>
    <string name="Change_Email">Change Email</string>
    <string name="My_address_book">My address book</string>
    <string name="Change_Area">Change Area</string>
    <string name="Change_to">Change to Arabic</string>
    <string name="Help_Center">Help Center</string>
    <string name="Terms_and_Condition">Terms and Condition</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Rate_US">Rate US</string>
    <string name="Logout">Logout</string>
    <string name="Find_answers">Find answers to your questions, \nfeel free and send to us</string>
    <string name="Message">Message</string>
    <string name="send">Send</string>

    <string name="Blank_field">Please do not leave the field blank.</string>
    <string name="Confirm">Confirm</string>
    <string name="Old_pass">Old Password</string>
    <string name="New_pass">New Password</string>
    <string name="Current_Password">Current Password</string>
    <string name="New_email">New Email</string>
    <string name="Change_email">Change Email</string>
    <string name="Special_instructions">Special instructions</string>
    <string name="Please_do_not">"   eg. \n  Please don't add specific something   "</string>
    <string name="AddToBasket">Add To Basket</string>
    <string name="Sizes">Sizes</string>
    <string name="Additionals">Additionals</string>
    <string name="Colors">Colors</string>
    <string name="Requests">Requests</string>
    <string name="Order_Notes">Order Notes</string>
    <string name="Order_Total">Order Total</string>
    <string name="Total">Total</string>
    <string name="Delivery_Charges">Delivery Charges</string>
    <string name="Place_Order">Place Order</string>

    <string name="Quantity">Quantity</string>
    <string name="LookupLocation">Lookup the Desired location</string>
    <string name="PickCountry">select country</string>
    <string name="PickCity">select city</string>
    <string name="save">Save</string>
    <string name="Phone">Phone</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="byclicku_accept">By clicking on Register, you understand and agree to the</string>
    <string name="and">and</string>
    <string name="continueasguest">Continue as guest</string>
    <string name="Reg_first_step">Step 1 of 3</string>
    <string name="Reg_sec_step">Step 2 of 3</string>
    <string name="Reg_final_step">Step 3 of 3</string>

    <string name="Registerـnow">Register now</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-password</string>
    <string name="select_image">select picture</string>
    <string name="EditProfile">Edit profile</string>
    <string name="Edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_address">new address</string>
    <string name="add_new">Add New</string>

    <string name="address">Address ...</string>
    <string name="bldngnum">Bldg No ( optional ) ...</string>
    <string name="floornum">Floor Number ( optional ) ...</string>
    <string name="aptnum">Apartment Number ( optional ) ...</string>
    <string name="addressNote">Note or landmark of the building</string>
    <string name="Set_location">Set location</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="back">Back</string>
    <string name="Congratulation">Congratulation</string>
    <string name="Done">Done</string>
    <string name="Date">Day/Time</string>
    <string name="Order_Number">Order Number</string>
    <string name="Order_Status">Status</string>
    <string name="pending_orders">Pending orders</string>
    <string name="call_delivery">Call delivery</string>
    <string name="loading">loading ...</string>
    <string name="currency">SAR</string>
    <string name="del_loc">Delivery Location</string>
    <string name="user_loc">User Location</string>
    <string name="store_loc">Store Location</string>
    <string name="pending">Pending...</string>
    <string name="in_prep">In preparation</string>
    <string name="order_det">Order details</string>
    <string name="skip_now">Skip now</string>
    <string name="not_val_addr">can\'t deliver to this address</string>
    <string name="add_promo">Add coupon</string>
    <string name="check">Check</string>
    <string name="change">Change</string>
    <string name="free_del">free delivery</string>
    <string name="discount">Discount</string>

</resources>