<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rkesta.richiesta.ui.activitymain.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_shoppingbasket"
        android:name="com.rkesta.richiesta.ui.cart.ShoppingBasketFragment"
        android:label="@string/title_shoppingbasket"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rkesta.richiesta.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>