<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_5"
    tools:context=".ui.settings.EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/grey_10"
        android:layout_weight="0.08">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/EditProfile_IV_close"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"
            android:src="@mipmap/ic_close"
            android:tint="@color/colorPrimary"/>

        <RelativeLayout
            android:id="@+id/EditProfile_RelativeLayout_righthelp"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/EditProfile_IV_close"
            android:layout_toStartOf="@id/EditProfile_RelativeLayout_righthelp"
            android:textColor="@color/colorPrimary"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:fontFamily="@font/cairo"
            android:text="@string/EditProfile"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.92">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_5"
            android:gravity="center"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_5"
                android:orientation="vertical"
                android:gravity="center" >


                <ImageView
                    android:id="@+id/EditProfile_IV_IMG"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/logoicon" />

                <Button
                    android:id="@+id/EditProfile_BTN_SelectIMG"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorAccentBrown"
                    android:textColor="@android:color/white"
                    android:text="@string/select_image" />

                <EditText
                    android:id="@+id/EditProfile_ET_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/firstname"
                    android:gravity="start"
                    android:fontFamily="@font/cairoregular"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/EditProfile_ET_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:gravity="start"
                    android:fontFamily="@font/cairoregular"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/EditProfile_ET_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:gravity="start"
                    android:fontFamily="@font/cairoregular"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/EditProfile_ET_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:gravity="left"
                    android:enabled="false"
                    android:fontFamily="@font/cairoregular"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/EditProfile_BTN_Save"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="40dp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/cairobold"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:text="@string/save"/>

            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/gradient_addproduct_shadow"/>



    </RelativeLayout>



</LinearLayout>