<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Accounting.Login">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/logoicon"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/iv_boarder"
        />

    <LinearLayout
        android:id="@+id/login_ll_phoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layoutDirection="ltr"
        android:gravity="center_vertical">

        <!--
            app:ccp_countryPreference="sa,eg"

 app:ccpDialog_searchEditTextTint="@color/custom_editText_tint"
 app:ccpDialog_backgroundColor="@color/custom_dialog_backgroud_color"
 app:ccpDialog_textColor="@color/custom_dialog_text"
 app:ccpDialog_fastScroller_bubbleColor="@color/custom_fastScroller_bubble"
 app:ccpDialog_fastScroller_bubbleTextAppearance="@style/custom_text_appearance"
 app:ccpDialog_fastScroller_handleColor="@color/custom_fastScroller_handle_color"
 app:ccpDialog_showTitle = "false"
        -->
        <com.hbb20.CountryCodePicker
            android:id="@+id/Login_ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairoregular"
            android:layout_alignParentLeft="true"
            android:layoutDirection="ltr"
            app:ccp_customMasterCountries="sa,eg"
            app:ccp_autoDetectLanguage="true"
            app:ccp_autoFormatNumber="true"

            app:ccp_defaultNameCode="SA"

            app:ccp_contentColor="@color/colorPrimaryBlack"
            app:ccp_flagBorderColor="@color/colorPrimaryBlack"
            app:ccp_autoDetectCountry="true"
            app:ccp_rememberLastSelection="true"
            app:ccp_arrowSize="26sp"
            />
        <EditText
            android:id="@+id/Login_ET_carrierNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/Login_ccp"
            android:editable="false"
            android:hint="123 45 678"
            android:digits="0123456789"

            android:fontFamily="@font/cairoregular"
            android:inputType="phone"
            android:singleLine="true" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/Login_ET_password"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="40dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/cairoregular"
            />

        <ImageView
            android:id="@+id/Login_IV_show_pass"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:alpha=".5"
            android:padding="5dp"
            android:src="@mipmap/ic_showpass" />
    </RelativeLayout>


    <Button
        android:id="@+id/Login_BTN_login"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/cairobold"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/Login"/>
    <Button
        android:id="@+id/Login_BTN_Register"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:fontFamily="@font/cairobold"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/Register"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/cairobold"
        android:gravity="center"
        android:text="@string/byclicku_accept"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/Login_TV_Privacy_Policy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairobold"
            android:text="@string/Privacy_Policy"
            />
        <TextView
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairobold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/cairobold"
            android:text="@string/and"
            />

        <TextView
            android:layout_width="5dp"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/Login_TV_Terms_and_Condition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairobold"
            android:text="@string/Terms_and_Condition"
            />

</LinearLayout>


    <Button
        android:id="@+id/Login_BTN_continueasguest"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:fontFamily="@font/cairobold"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/continueasguest"/>

</LinearLayout>