<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="20dp"
    tools:context=".ChoiceCountry">


    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/iv_boarder"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDesc"
        android:gravity="center"
        android:fontFamily="@font/cairobold"
        android:text="@string/LookupLocation"
        android:layout_margin="10dp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDesc"
            android:gravity="start"
            android:fontFamily="@font/cairobold"
            android:text="@string/PickCountry"
            android:layout_margin="10dp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/choice_country_spin_PickCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorDesc"
        android:gravity="start"
        android:fontFamily="@font/cairobold"
        android:text="@string/PickCity"
        android:layout_margin="10dp"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/choice_country_spin_PickCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        />

    <Button
        android:id="@+id/choice_country_BTN_Save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textAllCaps="false"
        android:fontFamily="@font/cairobold"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/save"/>



</LinearLayout>