<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.ChangeArea">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@color/grey_10"
        android:layout_weight="0.08">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/change_area_IV_close"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="10dp"
            android:src="@mipmap/ic_close"
            android:tint="@color/colorPrimary"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_weight="0.92">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/iv_boarder"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDesc"
            android:gravity="center"
            android:fontFamily="@font/cairobold"
            android:text="@string/LookupLocation"
            android:layout_margin="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDesc"
            android:gravity="start"
            android:fontFamily="@font/cairobold"
            android:text="@string/PickCountry"
            android:layout_margin="10dp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/change_area_spin_PickCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDesc"
            android:gravity="start"
            android:fontFamily="@font/cairobold"
            android:text="@string/PickCity"
            android:layout_margin="10dp"
            />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/change_area_spin_PickCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/change_area_BTN_Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:textAllCaps="false"
            android:fontFamily="@font/cairobold"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/save"/>


    </LinearLayout>




</LinearLayout>